--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -89,3 +89,6 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.user ]" 'source ~/.tmux.conf.user'
+
+# clear screen with vim-tmux-navigator
+bind C-l send-keys 'C-l'
